// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Container > Default story should render 1`] = `
<div
  className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl"
>
  <div
    className="bg-gray-200 p-4"
  >
    Default Container Content
  </div>
</div>
`;

exports[`Container > Fluid story should render 1`] = `
<div
  className="mx-auto px-4 sm:px-6 lg:px-8 w-full"
>
  <div
    className="bg-gray-200 p-4"
  >
    Fluid Container Content (Full Width)
  </div>
</div>
`;

exports[`Container > WithCustomClass story should render 1`] = `
<div
  className="mx-auto px-4 sm:px-6 lg:px-8 max-w-7xl bg-blue-50"
>
  <div
    className="p-4"
  >
    Container with Custom Background
  </div>
</div>
`;
